--- a/Ultimo.html
+++ b/Ultimo.html
@@ -6,16 +6,17 @@
 </head>
 
 <body>
-    <h2>Grupo</h2>
+    <h2>Grupo 4</h2>
     <p></p>
 <h3>Integrantes del grupo:</h3>
     <ul>
 
-        <li><h5>Mattiazzi, Justina</h5></li>
+	<li><h5>Collazo, Maria Josefina</h5></li>
+        <li><h5>Mattiazzi, Maria Justina</h5></li>
         <li><h5>Giugno, Juan Francisco</h5></li>
         <li><h5>Frery, Maria Valentina</h5></li>
         <li><h5>Podesta, Maria Emilia</h5></li>
-        <li><h5>Sarmiento, Maria Emilia</h5></li>
+        <li><h5>Sarmiento, Martina</h5></li>
 
     </ul>
 
